--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,11 +1,14 @@
-body {
+body{
     margin: 0;
     padding: 0;
     border: 0;
     overflow-x: hidden;
-  }
- /*Inicio Cabeçalho */
-  .cabecalho {
+
+    
+
+}
+
+.cabecalho {
 
     padding-top: 10px;
   background: #0c131d;
@@ -21,7 +24,6 @@ body {
     height: 100%;
     margin: 0 auto; 
   }
-
   .img_logo{
     position: relative;
     width: 7%;
@@ -34,13 +36,7 @@ body {
     list-style: none;
 
   }
-
-  .item_cor{
-    color: crimson;
-  }
-
   
-
   .cabecalho nav{
     float: right;
     margin: 0%;
@@ -56,34 +52,43 @@ body {
   right: 30%;
   }
 
-  /*Fim Cabeçalho*/
-
-  /*Inicio Sneaker*/
-
-  .sneaker{
-      text-align: center;
-      padding-top: 30px;
-  }
-
-  .caixa_sneaker{
+  .item_colorido{
       color: crimson;
-      height: 4000px;
   }
 
 
-  .newsnk{
-    width: 50%;
+
+/*Fim cabeçalho*/
+
+.div_sobre{
+
     position: relative;
+    width: 50%;
+    color: crimson;
     left: 25%;
-  }
+}
 
-  /*Fim Sneaker*/
 
-  .rodape{
+.img_justdoit{
+    position: relative;
+    left: 52%;
+    ;
+}
+
+.img_deusa{
+    position: relative;
+    left: 6%;
+   
+    width: 20%;
+}
+
+.rodape{
+    position: relative;
     padding-top: 0px;
     background: #0c131d;
     width: 100%;
     height: 100px;
+    top: 2px;
     color: crimson;
     }
   
