--- a/Site/public/css/sneakers.css
+++ b/Site/public/css/sneakers.css
@@ -79,10 +79,11 @@ body {
 
   /*Fim Sneaker*/
 
-  .comentar{
+  .post{
     text-align: center;
     position: relative;
     top: -550px;
+    color: crimson;
   }
 
   .text_padrao{
@@ -101,9 +102,38 @@ body {
     cursor: pointer;
     width: 7%;
     height: 40px;
-    top: -20px;
+    top: -50px;
     position: relative;
+    left: 18%;
+
   }
+
+  .publicacao {
+    background-color: white;
+    margin: 0 auto;
+    width: 50%;
+    display: block;
+    border: 2px solid crimson;
+    border-radius: 5px;
+    padding: 5px;
+    text-align: left;
+    margin-bottom: 10px;
+    position: relative;
+    top: -550px;
+}
+
+.nome {
+    float:left;
+    color:crimson;
+    font-weight: bold;
+    /* border: 1px solid rgb(255, 95, 37); */
+}
+
+.descricao {
+    height: auto;
+    width: auto;
+    margin-left: 13%;
+}
 
   .rodape{
     padding-top: 0px;
