--- a/Site/public/css/cadastro.css
+++ b/Site/public/css/cadastro.css
@@ -2,26 +2,20 @@ body{
     margin: 0;
     padding: 0;
     border: 0;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    
-
 }
 
 .cabecalho {
-
-    padding-top: 10px;
+  position: relative;
   background: #0c131d;
   width: 100%;
-  height: 60px;
+  height: 5vw;
   border-bottom:  3px solid crimson;
   
   }
 
   .img_logo{
     position: relative;
-    width: 7%;
-    top: -28px;
+    width: 5vw;
     left: 3%;
   }
 
@@ -55,24 +49,22 @@ body{
 /*Inicio Cadastro*/
 
 .cadastro{
+  display: flex;
     position: relative;
-    width: 40%;
+    width: 100%;
     color: crimson ;
-    top: 15px;
-    left: 10%;
 }
 
 .caixa_cadastro{
     position: relative;
     background-color: white;
     box-shadow: 10px 10px 10px 7px #ccc;
-    padding: 10% 0%;
     border-radius: 20px;
-    left: 2%;
-    top: 45px;
-    color: crimson;;
-    
-
+    color: crimson;
+    width: 40%;
+    margin: auto 2.5%;
+    padding: 2.5%;
+    height: 80%;
 }
 
 .h2_texto{
@@ -90,12 +82,15 @@ body{
     border: none;
     top: 15px;
 }
-
+.div_img {
+  width: 40%;
+  float: right;
+  margin: 5%;
+}
 
 .img_logo2{
     position: relative;
-    top: -425px;
-    left: 60%;
+    width: 100%;
 }
 
 .div_cadastro{
@@ -129,13 +124,11 @@ body{
 
 
 .rodape{
-  padding-top: 0px;
   background: #0c131d;
   width: 100%;
   height: 100px;
   color: crimson;
   position: relative;
-  top: -320px;
     }
   
     .rodape h4{
