--- a/Site/public/css/index.css
+++ b/Site/public/css/index.css
@@ -6,24 +6,27 @@ body {
     
   }
  /*Inicio Cabeçalho */
-  .cabecalho {
+ .cabecalho {
+  position: relative;
+  padding-top: 10px;
+background: #0c131d;
+width: 100%;
+height: 5vw;
+border-bottom:  3px solid crimson;
 
-    padding-top: 10px;
-  background: #0c131d;
-  width: 100%;
-  height: 60px;
-  border-bottom:  3px solid crimson;
-  
-  }
+}
 
-  
-  
-  .img_logo{
-    position: relative;
-    width: 7%;
-    top: -28px;
-    left: 3%;
-  }
+
+.caixa_cadastro{
+  max-width: 1080px;
+  height: 100%;
+  margin: 0 auto; 
+}
+.img_logo{
+  position: relative;
+  width: 5vw;
+  left: 3%;
+}
 
   ul{
     color: white;
